# dike-defect-detection

./: .gitignore  .pre-commit-config.yaml  Taskfile.yml  pyproject.toml
data/: province_mapping.json
notebooks/: analyze_scene_assessment.ipynb
scripts/: analyze_uav_images.py
src/dike_defect_detection/camera_capture/: README.md  __init__.py  __main__.py  capture.py  constants.py  mappings.py
src/dike_defect_detection/image_assessment/: README.md  __init__.py  __main__.py  blur.py  calibrate.py  cli.py  constants.py  day_night.py  metadata.py  resolution.py
src/dike_defect_detection/scene_understanding/: README.md  __init__.py  __main__.py  cli.py  groups.py  io.py  labels.py  metrics.py  oneformer.py  overlay.py  processing.py  usability.py  visualization.py
src/dike_defect_detection/synthesis/: __init__.py  suitability.py
